@@ -1,6 +1,7 @@
 V0.2.8
     - Added ChangeLog to repo
     - Fixed 'fadeAlert' function in util js
+    - Updates to Template project
     - ...
 V0.2.7
     - Fixed missing 'to' field in Link widget
